--- a/CoffeCheap/web/Proveedor_Modificar.xhtml
+++ b/CoffeCheap/web/Proveedor_Modificar.xhtml
@@ -18,6 +18,8 @@
                         <p:inputText id="codigo" value="#{proveedorBean.proveedor.id_proveedor}"/>
                         <p:outputLabel for="nombre" value="Nombre"/>
                         <p:inputText id="nombre" value="#{proveedorBean.proveedor.nombre}"/>
+                        <p:outputLabel for="nit" value="Nit"/>
+                        <p:inputText id="nit" value="#{proveedorBean.proveedor.nit}"/>
                         <p:outputLabel for="telefono" value="Telefono"/>
                         <p:inputMask id="telefono" value="#{proveedorBean.proveedor.telefono}" mask="99999999"/>
                         <p:outputLabel for="correo" value="Email"/>
