--- a/CoffeCheap/web/Mesa_Guardar.xhtml
+++ b/CoffeCheap/web/Mesa_Guardar.xhtml
@@ -58,7 +58,7 @@
               <h:outputText id="UbicacionV" value="#{mesaBean.mesa.ubicacion}" />
               
               <h:outputText value="Estado" />
-              <h:outputText id="EstadoV" value="#{mesaBean.mesa.gestMesaid_estado}" />
+              <h:outputText id="EstadoV" value="#{mesaBean.mesa.estMesa.id_estado}" />
               
               <h:outputText value="Reserva" />
               <h:outputText id="ReservaV" value="#{mesaBean.mesa.reserva.id_reserva}" />
