--- a/CoffeCheap/web/index.xhtml
+++ b/CoffeCheap/web/index.xhtml
@@ -51,7 +51,7 @@
                 <div class="input-field col s10">
 
       <i class="material-icons prefix">account_circle</i>
-                    <p:inputText id="usuario" value="#{loginBean.usu.usua}" class="validate"  required="true" a:placeholder="Usuario123" requiredMessage="Usuario es necesario"/>
+      <p:inputText id="usuario" value="#{loginBean.usu.usuario}" class="validate"  required="true" a:placeholder="Usuario123" requiredMessage="Usuario es necesario"/>
                   <h:outputLabel for="usuario" value="Usuario:" style="color: grey"/>
              
                 </div>
