--- a/CoffeCheap/web/Pedido_Modificar.xhtml
+++ b/CoffeCheap/web/Pedido_Modificar.xhtml
@@ -43,7 +43,7 @@
                 <f:facet name="header">id personal</f:facet>            
               
                 
-                <p:selectOneMenu id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.pmesero.id_personal_servicio}" > 
+                <p:selectOneMenu id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.usuario.id}" > 
                   <f:selectItems value="#{personal_MeseroBean.lstPermes}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id_personal_servicio}"/>                      
                 </p:selectOneMenu> 
               </p:column>                    
