--- a/CoffeCheap/web/Pedido_Eliminar.xhtml
+++ b/CoffeCheap/web/Pedido_Eliminar.xhtml
@@ -41,7 +41,7 @@
               </p:column>
               <p:column>
                 <f:facet name="header">id personal</f:facet>
-                <h:inputText value="#{tabla.pmesero.id_personal_servicio}" style="color: #ffffff; width : 160px" />
+                <h:inputText value="#{tabla.usuario.id}" style="color: #ffffff; width : 160px" />
               </p:column>              
 
               <p:column>
