--- a/CoffeCheap/web/Pedido_Eliminar.xhtml
+++ b/CoffeCheap/web/Pedido_Eliminar.xhtml
@@ -15,10 +15,12 @@
       <ui:define name="content">
 
         <f:event type="preRenderView" listener="#{pedidoBean.listar()}"/>
+        <f:event type="preRenderView" listener="#{mesaBean.listar()}"/>
+        <f:event type="preRenderView" listener="#{usuarioBean.listarMe()}"/>
         <h:form class="flip">
-          
-            <p:outputLabel style="color: #ffffff;" value="Lista para escoger el pedido a eliminar" />          
-         
+
+          <p:outputLabel style="color: #ffffff;" value="Lista para escoger el pedido a eliminar" />          
+
         </h:form>
         <h:form id="otro">
 
@@ -31,17 +33,27 @@
                 <f:facet name="header">Id Pedido</f:facet>
                 <h:inputText value="#{tabla.id_pedido}" style="color: #ffffff; width : 30px" />
               </p:column>
-              <p:column>
-                <f:facet name="header">Id Mesa</f:facet>
-                <h:inputText value="#{tabla.mesa.id_mesa}" style="color: #ffffff; width : 160px" />
+
+              <p:column>               
+                <p:outputLabel for="lisx" value="mesa:" style="color: #ffffff" />
+                <p:selectOneMenu id="lisx" style="width:200px" value="#{tabla.mesa.id_mesa}"> 
+                  <f:selectItems value="#{mesaBean.lstMesa}" var="tip" itemLabel="#{tip.ubicacion}" itemValue="#{tip.id_mesa}"/>                        
+                </p:selectOneMenu>
               </p:column>
+
               <p:column>
                 <f:facet name="header">hora</f:facet>
                 <h:inputText value="#{tabla.hora}" style="color: #ffffff; width : 160px" />
               </p:column>
-              <p:column>
-                <f:facet name="header">id personal</f:facet>
-                <h:inputText value="#{tabla.usuario.id}" style="color: #ffffff; width : 160px" />
+
+              <p:column>               
+
+                <p:outputLabel for="lis" value="personal:" style="color: #ffffff"/>
+                <p:selectOneMenu id="lis" style="width:200px" value="#{tabla.usuario.id}"> 
+                  <f:selectItems value="#{usuarioBean.lstUsuarioMe}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id}"/>      
+                  <p:ajax event="change" update="@this" />      
+                </p:selectOneMenu>  
+
               </p:column>              
 
               <p:column>
