--- a/CoffeCheap/web/Control_Mesa.xhtml
+++ b/CoffeCheap/web/Control_Mesa.xhtml
@@ -15,7 +15,7 @@
       <ui:define name="content">
 
         <f:event type="preRenderView" listener="#{mesaBean.listar()}"/>
-        <f:event type="preRenderView" listener="#{usuarioBean.listarChef()}"/>
+        <f:event type="preRenderView" listener="#{usuarioBean.lstUsuarioChef}"/>
 
         <h:form class="flip">
 
