--- a/CoffeCheap/web/Control_Mesa.xhtml
+++ b/CoffeCheap/web/Control_Mesa.xhtml
@@ -15,38 +15,26 @@
       <ui:define name="content">
 
         <f:event type="preRenderView" listener="#{mesaBean.listar()}"/>
-        <f:event type="preRenderView" listener="#{usuarioBean.lstUsuarioChef}"/>
+        <f:event type="preRenderView" listener="#{usuarioBean.listarChef()}"/> 
 
         <h:form class="flip">
 
           <h:panelGrid id="desplegar1" columns="2" cellpadding="5" border="1">
 
-            <p:outputLabel value="id_pedido" />
-            <p:autoComplete id="Codig" value="#{pedidoBean.pedido.id_pedido}"/>                         
+            <p:outputLabel value="No de Mesa" />
+            <p:autoComplete id="nomesa" value=""/>                         
 
-            <p:outputLabel for="lisz" value="id_mesa:" />
-            <p:selectOneMenu id="lisz" style="width:200px" value="#{pedidoBean.pedido.mesa.id_mesa}"> 
-              <f:selectItems value="#{mesaBean.lstMesa}" var="tip" itemLabel="#{tip.ubicacion}" itemValue="#{tip.id_mesa}"/>      
-              <p:ajax event="change" update="@this" />      
-            </p:selectOneMenu>
+            
 
-            <p:outputLabel value="hora" />
-            <p:inputMask id="hora" value="#{pedidoBean.pedido.hora}" mask="99:99:99"/>
-
-
-            <p:outputLabel for="lis" value="id_personal:" />
-            <p:selectOneMenu id="lis" style="width:200px" value="#{pedidoBean.pedido.usuario.id}"> 
-              <f:selectItems value="#{usuarioBean.lstUsuarioChef}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id}"/>      
-              <p:ajax event="change" update="@this" />      
-            </p:selectOneMenu>          
+              
           </h:panelGrid>
-          <p:commandButton value="Guardar" update="display" oncomplete="PF('dlg').show()" actionListener="#{pedidoBean.registrar()}"/>
+          <!--<p:commandButton value="Guardar" update="display" oncomplete="PF('dlg').show()" actionListener="#{pedidoBean.registrar()}"/>
 
           <p:dialog widgetVar="dlg" modal="true" resizable="false" header="Valores Guardados" showEffect="fade"> 
             <p:panelGrid id="display" columns="2" columnClasses="label,value">
 
               <h:outputText value="Codigo Trasaccion" />
-              <h:outputText id="CodigV" value="#{pedidoBean.pedido.id_pedido}" />                         
+              <h:outputText id="CodigV" value="#{pedidoBean.pedido.id_pedido}" />     -->                     
 
 
             </p:panelGrid>
