APLICACION DEHECK BLIBLIOTECA

--- a/CoffeCheap/web/Control_Mesa.xhtml
+++ b/CoffeCheap/web/Control_Mesa.xhtml
@@ -15,33 +15,25 @@
         <ui:composition template="./WEB-INF/template/Template.xhtml">
             <ui:define name="content">
 
-
-
-                <h:form class="flip">
+                <h:form class="flip" id="tempo">
 
                     <p:panelGrid id="desplegar1" columns="5">
                         <c:forEach begin="1" end="#{control_mesaBean.tamano()}" step="1" var="i">
 
-                            <h:button  value="${i}" style="color: white"/>                           
+                            <h:button  value="${i}" style="color: white; background-color: #{control_mesaBean.ControlEstado(i)}; width:40px; align-items: center"/>                           
 
-                            <p:button  value="Pedido" icon="ui-icon-star" style="color: black">
+                            <p:button  value="Pedido" icon="ui-icon-star" style="color: black; background-color: #{control_mesaBean.ControlEstado(i)};">
                                 <f:param name="proceso3" value="10" />
                             </p:button>      
 
+                            <p:commandButton  actionListener="#{control_mesaBean.RegistrarPago(i)}" update="tempo" value="#{control_mesaBean.EstaPago(i)}" icon="ui-icon-star"  style="color: black; width:150px; background-color: #{control_mesaBean.ControlEstado(i)};" disabled="#{control_mesaBean.HabilitarPago(i)}"/>
+                   
+                            
 
-                            <p:button  value="" icon="ui-icon-star"  style="color: black" disabled="#{control_mesaBean.pago(i)}">
-                                <f:param name="proceso4" value="10" />
-                            </p:button>
-
-
-
-
-
-
-                            <p:button  value="Vaciar_Mesa" icon="ui-icon-star" style="color: black">
+                            <p:button  value="Vaciar_Mesa" icon="ui-icon-star" style="color: black; background-color: #{control_mesaBean.ControlEstado(i)};">
                                 <f:param name="proceso5" value="10" />
                             </p:button>
-                            <p:button  value="Historial" icon="ui-icon-star" style="color: black">
+                            <p:button  value="Historial" icon="ui-icon-star" style="color: black; background-color: #{control_mesaBean.ControlEstado(i)};">
                                 <f:param name="proceso6" value="10" />
                             </p:button>
 
