--- a/CoffeCheap/web/Control_Mesa.xhtml
+++ b/CoffeCheap/web/Control_Mesa.xhtml
@@ -17,15 +17,19 @@
         <h:form class="flip" id="tempo">
           <p:growl id="messages" life="20000"/>
 
-          <p:panelGrid id="desplegar1" columns="5">
+          <p:panelGrid id="desplegar1" columns="6">
             <c:forEach begin="1" end="#{control_mesaBean.tamano()}" step="1" var="i">
 
               <h:button  value="${i}" style="color: white; background-color: #{control_mesaBean.ControlEstado(i)}; width:40px; align-items: center"/>                           
 
               <p:commandButton actionListener="#{control_mesaBean.CambioEstado(i)}" update="messages, tempo" value="Pedido" icon="ui-icon-star" style="color: black; background-color: #{control_mesaBean.ControlEstado(i)};"/>
 
-              <p:commandButton  actionListener="#{control_mesaBean.RegistrarPago(i)}" update="display, tempo, messages" oncomplete="PF('dlg').show()" value="#{control_mesaBean.EstaPago(i)}" 
-                                icon="ui-icon-star"  style="color: black; width:150px; background-color: #{control_mesaBean.ControlEstado(i)};" 
+              <p:commandButton  update="display, tempo, messages" oncomplete="PF('dlg').show()" value="Generar Factura" 
+                                icon="ui-icon-star"  style="color: black; width:180px; background-color: #{control_mesaBean.ControlEstado(i)};" 
+                                disabled="#{control_mesaBean.HabilitarPago(i)}" />
+              
+              <p:commandButton  actionListener="#{control_mesaBean.RegistrarPago(i)}" update="tempo, messages" value="#{control_mesaBean.EstaPago(i)}" 
+                                icon="ui-icon-star"  style="color: black; width:120px; background-color: #{control_mesaBean.ControlEstado(i)};" 
                                 disabled="#{control_mesaBean.HabilitarPago(i)}"/>
 
 
@@ -46,7 +50,7 @@
             <h:outputText value="Propina: "/>
             <p:selectBooleanButton id="value1" value="#{venta_facturaBean.venta_factura.opc_propina}" onLabel="Yes" offLabel="No" onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:200px; align-content: center;height: 30px" />
 
-            <p:commandButton value="Guardar" update="display" actionListener="#{venta_facturaBean.registrar_venta(3)}"/>
+            <p:commandButton value="Guardar" update="display" actionListener="#{venta_facturaBean.registrar_venta(3)}"  oncomplete="PF('dlg').hide();"/>
                       
             </p:panelGrid>
           </p:dialog>      
