--- a/CoffeCheap/web/Cliente_modificar.xhtml
+++ b/CoffeCheap/web/Cliente_modificar.xhtml
@@ -2,31 +2,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Cliente Modificar</title>
-    </h:head>
-    <h:body>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+  <h:head>
+    <title>Cliente Modificar</title>
+  </h:head>
+  <h:body>
+    <ui:composition template="./WEB-INF/template/Template.xhtml">
+      <ui:define name="content">
+        
         <h:form id="datos">
-            <br/>
-                    <p:outputLabel value="ingrese id  "/>
-                    <p:inputText  value="#{clienteBean.cliente.id_cliente}"/>
-                    <br/>
-                    <br/>
-                    <p:outputLabel value="ingrese nit  "/>
-                    <p:inputText  value="#{clienteBean.cliente.nit_cliente}"/>
-                    <br/>
-                    <br/>
-                    <p:outputLabel value="ingrese nombre "/>
-                    <p:inputText  value="#{clienteBean.cliente.nombre}"/>
-                    <br/>
-                    <br/>
-                    <p:outputLabel value="ingrese Direccion  "/>
-                    <p:inputText  value="#{clienteBean.cliente.direccion}"/>
-                    <br/>
-                    <p:commandButton value="Buscar" actionListener="#{clienteBean.buscar()}" update="datos"/>
-                    <p:commandButton value="Modificar" actionListener="#{clienteBean.modificar()}" />
+          <br/>
+          <p:outputLabel value="ingrese id  "/>
+          <p:inputText  value="#{clienteBean.cliente.id_cliente}"/>
+          <br/>
+          <br/>
+          <p:outputLabel value="ingrese nit  "/>
+          <p:inputText  value="#{clienteBean.cliente.nit_cliente}"/>
+          <br/>
+          <br/>
+          <p:outputLabel value="ingrese nombre "/>
+          <p:inputText  value="#{clienteBean.cliente.nombre}"/>
+          <br/>
+          <br/>
+          <p:outputLabel value="ingrese Direccion  "/>
+          <p:inputText  value="#{clienteBean.cliente.direccion}"/>
+          <br/>
+          <p:commandButton value="Buscar" actionListener="#{clienteBean.buscar()}" update="datos"/>
+          <p:commandButton value="Modificar" actionListener="#{clienteBean.modificar()}" />
         </h:form>
-    </h:body>
+        
+      </ui:define>
+    </ui:composition>
+  </h:body>
 </html>
 
