--- a/CoffeCheap/web/Cliente_modificar.xhtml
+++ b/CoffeCheap/web/Cliente_modificar.xhtml
@@ -10,7 +10,7 @@
   <h:body>
     <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
-        
+         <h2>Modificar Cliente</h2>
         <h:form id="datos">
           <br/>
           <p:outputLabel value="ingrese id  "/>
