--- a/CoffeCheap/web/Cliente_Buscar_y_Registrar.xhtml
+++ b/CoffeCheap/web/Cliente_Buscar_y_Registrar.xhtml
@@ -5,11 +5,12 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
   <h:head>
-    <title>Cliente Modificar</title>
+    <title>Cliente Mostrar</title>
   </h:head>
   <h:body>
+
     <ui:composition template="./WEB-INF/template/Template.xhtml">
-      <ui:define name="content">
+      <ui:define name="content">  
 
         <h:form id="datos" style="color: white">
           <h2>Modificar Cliente</h2>
@@ -19,14 +20,11 @@
             <p:outputLabel value="ingrese id  "/>
             <p:inputText  value="#{clienteBean.cliente.id_cliente}"/>
 
-
             <p:outputLabel value="ingrese nit  "/>
             <p:inputText  value="#{clienteBean.cliente.nit_cliente}"/>
 
-
             <p:outputLabel value="ingrese nombre "/>
             <p:inputText  value="#{clienteBean.cliente.nombre}"/>
-
 
             <p:outputLabel value="ingrese Direccion  "/>
             <p:inputText  value="#{clienteBean.cliente.direccion}"/>
@@ -34,11 +32,11 @@
           <br/>
             <p:commandButton value="Buscar" actionListener="#{clienteBean.buscar()}" update="datos"/>
             <p:outputLabel value="&nbsp;&nbsp;"/>
-            <p:commandButton value="Modificar" actionListener="#{clienteBean.modificar()}" />
-         
+            <p:commandButton value="Registrar" actionListener="#{clienteBean.registrar()}" />         
         </h:form>
 
       </ui:define>
+
     </ui:composition>
   </h:body>
 </html>
